# Axum_Auth

./: Axum_auth.postman_collection.json  Cargo.toml  Makefile  README.md  docker-compose.yml
migrations/: 20260510105935_users.up.sql  20260510132110_users.down.sql
src/: config.rs  handler.rs  jwt_auth.rs  main.rs  model.rs  route.rs
