[package]
name = "axum-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
axum-extra = {version = "0.12.6", features = ["cookie"]}
chrono = {version = "0.4.44", features = ["serde"]}
dotenv = "0.15.0"
jsonwebtoken = {version = "10.3.0", features = ["rust_crypto"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = {version = "0.8.6", features = ["runtime-async-std-native-tls", "postgres", "chrono", "uuid"]}
time = "0.3.47"
tokio = {version = "1.52.3",features = ["full"]}
tower-http = {version = "0.6.10", features = ["cors"]}
uuid = {version = "1.23.1", features = ["serde", "v4"]}
